# not-so-realworld-server

./: .env.sample  README.md
NotSoRealWorld - iOS/NotSoRealWorld/: NotSoRealWorldApp.swift
NotSoRealWorld - iOS/NotSoRealWorld.xcodeproj/: project.pbxproj
NotSoRealWorld - iOS/NotSoRealWorld.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
NotSoRealWorld - iOS/NotSoRealWorld/Enums/: AlertError.swift
NotSoRealWorld - iOS/NotSoRealWorld/Extensions/: HTTPRequest+Ext.swift
NotSoRealWorld - iOS/NotSoRealWorld/Models/: ApiError.swift  ApiResponse.swift  CustomError.swift  LoginUser.swift  NewUser.swift  UpdateUser.swift  User.swift
NotSoRealWorld - iOS/NotSoRealWorld/Scenes/: LoginView.swift  LoginViewModel.swift  ProfileView.swift  ProfileViewModel.swift
NotSoRealWorld - iOS/NotSoRealWorld/Utils/: Loading.swift
NotSoRealWorld - iOS/NotSoRealWorld/ViewModifiers/: ErrorAlert.swift
NotSoRealWorld - iOS/NotSoRealWorld/Views/: TextFieldGridRow.swift
migrations/: 20240403143010_init.up.sql  20240403200330_add_users_column_check.down.sql
not-so-realworld-server/: .gitignore  Cargo.toml
not-so-realworld-server/migrations/: 20240403200330_add_users_column_check.up.sql
not-so-realworld-server/src/: main.rs
not-so-realworld-server/src/http/: mod.rs  response.rs  user.rs
src/: config.rs
src/http/: response.rs  traits.rs  user.rs
src/http/extractors/: auth_user.rs  mod.rs
