[package]
name = "not-so-realworld-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.7.5", features = ["macros", "tracing"] }
axum-extra = "0.9.3"
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "9.3.0", default-features = false }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "migrate",
    "uuid",
] }
thiserror = "1.0.58"
time = "0.3.34"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
